--- a/mobile_client/UdpAndroidPOC/res/layout/main.xml
+++ b/mobile_client/UdpAndroidPOC/res/layout/main.xml
@@ -3,10 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:layout_width="fill_parent"
+
+    <Button
+        android:id="@+id/button1"
+        android:text="Send udp packae"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        />
 
 </LinearLayout>
