--- a/mobile_client/UdpAndroidPOC/res/layout/main.xml
+++ b/mobile_client/UdpAndroidPOC/res/layout/main.xml
@@ -3,12 +3,104 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+
     <Button
-        android:id="@+id/button1"
-        android:text="Send udp packae"
+        android:id="@+id/send_udp_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="Send test udp message" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/set_browserID_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Set Browser ID" />
+
+        <EditText
+            android:id="@+id/browserID_editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/set_ip_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Set IP" />
+
+        <EditText
+            android:id="@+id/ip_editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10" >
+
+            <requestFocus />
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="10.88" >
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/ip_textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="IP adress"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="UID: "
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/uid_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Unique ID"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Browser ID: "
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/browserID_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Browser id"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </LinearLayout>
 
 </LinearLayout>
